<resources>
    <string name="app_name">Start Wars</string>

    <string name="release_date">Release date</string>
    <string name="producer">Producer</string>
    <string name="director">Director</string>
    <string name="count">Total %1$d Movies</string>
    <string name="list_title">Think-it Star Wars</string>
    <string name="created">Created</string>
    <string name="edited">Edited</string>
    <string name="opening_crawl">Opening crawl</string>
    <string name="place_holder_paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sed augue in mauris efficitur vestibulum in at sem. Morbi id arcu quis turpis tempor egestas mattis id arcu. Cras sem ipsum, pharetra quis purus nec, blandit molestie ligula. Mauris dignissim quam in velit aliquam, tincidunt rutrum diam elementum. </string>
<string name="date_placeholder">1977/05/25</string>
</resources>