<?xml version="1.0" encoding="utf-8"?>
<com.facebook.shimmer.ShimmerFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/shimmerLayout"
    app:shimmer_clip_to_children="true"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.movie.MovieDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/topCL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:paddingBottom="26dp"
            android:elevation="10dp"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/titleTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="9dp"
                android:layout_marginTop="18dp"
                android:gravity="center|left"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="A New Hope" />


            <LinearLayout
                android:id="@+id/releaseDateLL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleTV">

                <TextView
                    android:id="@+id/releaseDateTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="24dp"
                    android:gravity="center|left"
                    android:paddingLeft="9dp"
                    android:text="@string/release_date"
                    android:textColor="@color/white"
                    android:textSize="9sp"
                    app:layout_constraintLeft_toLeftOf="@+id/dateTV"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Release date" />


                <TextView
                    android:id="@+id/dateTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="12dp"
                    android:gravity="center|left"
                    android:paddingLeft="9dp"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    android:text="@string/date_placeholder"
                    android:visibility="visible"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/releaseDateTV" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/dirLL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                app:layout_constraintLeft_toRightOf="@+id/releaseDateLL"
                app:layout_constraintTop_toBottomOf="@+id/titleTV">

                <TextView
                    android:id="@+id/directorTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center|left"
                    android:text="@string/director"
                    android:textColor="@color/white"
                    android:textSize="9sp"
                    app:layout_constraintLeft_toLeftOf="@+id/dateTV"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/dirNameTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:ellipsize="end"
                    android:gravity="center|left"
                    android:lines="1"
                    android:text="@string/director"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/releaseDateTV" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/prodLL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                app:layout_constraintLeft_toRightOf="@+id/dirLL"
                app:layout_constraintTop_toBottomOf="@+id/titleTV">

                <TextView
                    android:id="@+id/producerTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center|left"
                    android:text="@string/producer"
                    android:textColor="@color/white"
                    android:textSize="9sp"
                    app:layout_constraintLeft_toLeftOf="@+id/dateTV"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/prodNameTV"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="12dp"
                    android:ellipsize="end"
                    android:text="@string/producer"
                    android:gravity="center|left"
                    android:lines="1"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/releaseDateTV" />
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/subTitleTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="20dp"
            android:gravity="center|left"
            android:text="@string/opening_crawl"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topCL" />


        <TextView
            android:id="@+id/descriptionTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center|left"
            android:justificationMode="none"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:text="@string/place_holder_paragraph"
            app:layout_constrainedWidth="false"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subTitleTV" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/descriptionTV">


            <LinearLayout
                android:id="@+id/createdLL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                app:layout_constraintLeft_toRightOf="@+id/dirLL"
                app:layout_constraintTop_toBottomOf="@+id/titleTV">

                <TextView
                    android:id="@+id/createdTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center|left"
                    android:text="@string/created"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    app:layout_constraintLeft_toLeftOf="@+id/dateTV"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/createdDateTV"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="12dp"
                    android:ellipsize="end"
                    android:gravity="center|left"
                    android:lines="1"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:text="@string/date_placeholder"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/releaseDateTV" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/editedLL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                app:layout_constraintLeft_toRightOf="@+id/releaseDateLL"
                app:layout_constraintTop_toBottomOf="@+id/titleTV">

                <TextView
                    android:id="@+id/editedTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center|left"
                    android:text="@string/edited"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    app:layout_constraintLeft_toLeftOf="@+id/dateTV"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/editedDateTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:ellipsize="end"
                    android:gravity="center|left"
                    android:lines="1"
                    android:text="@string/date_placeholder"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/releaseDateTV" />
            </LinearLayout>


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</com.facebook.shimmer.ShimmerFrameLayout>