<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@color/black">


        <TextView
            android:id="@+id/titleTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="9dp"
            android:layout_marginTop="23dp"
            android:gravity="center|left"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="A New Hope" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/titleTV"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/titleTV">

            <TextView
                android:id="@+id/releaseDateTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="24dp"
                android:gravity="center|left"
                android:paddingLeft="9dp"
                android:text="@string/release_date"
                android:textColor="@color/white"
                android:textSize="9sp"
                app:layout_constraintLeft_toLeftOf="@+id/dateTV"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Release date" />


            <TextView
                android:id="@+id/dateTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:gravity="center|left"
                android:paddingLeft="9dp"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:visibility="visible"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/releaseDateTV"
                tools:text="1977/05/25" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/dirLL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTV">

            <TextView
                android:id="@+id/directorTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|left"
                android:text="@string/director"
                android:textColor="@color/white"
                android:textSize="9sp"
                app:layout_constraintLeft_toLeftOf="@+id/dateTV"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/dirNameTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:ellipsize="end"
                android:gravity="center|left"
                android:lines="1"
                android:textColor="@color/white"
                android:textSize="13sp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/releaseDateTV" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/prodLL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toRightOf="@+id/dirLL"
            app:layout_constraintTop_toBottomOf="@+id/titleTV">

            <TextView
                android:id="@+id/producerTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|left"
                android:text="@string/producer"
                android:textColor="@color/white"
                android:textSize="9sp"
                app:layout_constraintLeft_toLeftOf="@+id/dateTV"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/prodNameTV"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginRight="12dp"
                android:ellipsize="end"
                android:gravity="center|left"
                android:lines="1"
                android:textColor="@color/white"
                android:textSize="13sp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/releaseDateTV" />
        </LinearLayout>


        <TextView
            android:id="@+id/descriptionTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="7dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="21dp"
            android:ellipsize="end"
            android:gravity="center|left"
            android:maxLines="2"
            android:textColor="@color/white"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dirLL" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>